# QtCloudPan

./: CMakeLists.txt  main.cpp
LoginDialog/: logindialog.h
LoginDialog/Header/: LoginUserInfo.h  titlewidget.h
LoginDialog/Source/: LoginUserInfo.cpp  logindialog.cpp  logindialog.ui  titlewidget.cpp  titlewidget.ui
config/: cfg.json
mainWidget/: mainwindow.cpp  mainwindow.h  mainwindow.ui
mainWidget/header/: DownloadTask.cpp  DownloadTask.h  fileinfodialog.h  myfilewidget.h  topbtngroup.h
mainWidget/source/: fileinfodialog.cpp  fileinfodialog.ui  mainwindow.cpp  mainwindow.ui  myfilewidget.cpp  myfilewidget.ui  topbtngroup.cpp  topbtngroup.ui
resource/: resources.qrc
resource/style/: LoginDialogStyle.qss  base.qss  mainWindow.qss  styles.css  styles.qss
utils/: utils.h
utils/header/: Common.h  DBUtils.h  FileInfo.h  HttpMultiPartFile.h  QHttpRequest.h  movablewidget.h
utils/source/: Common.cpp  DBUtils.cpp  FileInfo.cpp  HttpMultiPartFile.cpp  QHttpRequest.cpp  des.c  movablewidget.cpp
